# pydra-tasks-template

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml  fileformats-ci-cd.yaml  pythonpackage.yaml  pythonpackage.yml
docs/: conf.py  index.rst
fileformats/: pyproject.toml
fileformats-extras/: pyproject.toml
fileformats/extras/: pyproject.toml
fileformats/medimage-CHANGEME/: pyproject.toml
fileformats/medimage-CHANGME-extras/: pyproject.toml
fileformats/src/: README.rst  pyproject.toml
pydra/tasks/CHANGEME/: __init__.py
pydra/tasks/TODO/: __init__.py
related-packages/fileformats/: README.rst  pyproject.toml
related-packages/fileformats-extras/: README.rst  pyproject.toml
tools/: rename_template.py
