[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "pydra-tasks-TODO"
description = "Description for pydra-tasks-TODO"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pydra >=0.20"]
license = {file = "LICENSE"}
authors = [{name = "Nipype developers", email = "neuroimaging@python.org"}]
maintainers = [{name = "Nipype developers", email = "neuroimaging@python.org"}]
keywords = ["pydra"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
]
doc = [
    "packaging",
    "sphinx >=2.1.2",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc ~=0.3.0",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-versioning",
]
test = [
    "pytest >= 4.4.0",
    "pytest-cov",
    "pytest-env",
    "pytest-xdist",
    "pytest-rerunfailures",
    "codecov",
]

[tool.flit.module]
name = "pydra.tasks.TODO"

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "pydra/tasks/TODO/_version.py"

[tool.black]
line-length = 99
target-version = ["py37"]
exclude = "_version.py"
